--- a/meteor-simple-todos.html
+++ b/meteor-simple-todos.html
@@ -1,14 +1,21 @@
 <head>
-  <title>meteor-simple-todos</title>
+  <title>Todo List</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <div id="container">
+    <header>
+      <h1>Todo List</h1>
+    </header>
 
-  {{> hello}}
+    <ul>
+      {{#each tasks}}
+        {{> task}}
+      {{/each}}
+    </ul>
+  </div>
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="task">
+  <li>{{text}}</li>
 </template>
