--- a/meteor-simple-todos.html
+++ b/meteor-simple-todos.html
@@ -20,5 +20,9 @@
 </body>
 
 <template name="task">
-  <li>{{text}}</li>
+  <li class="{{#if checked}}checked{{/if}}">
+    <button class="delete">&times;</button>
+    <input class="toggle-checked" type="checkbox" checked="{{checked}}">
+    <span class="text">{{text}}</span>
+  </li>
 </template>
