Storing temporary UI state in Session

--- a/meteor-simple-todos.html
+++ b/meteor-simple-todos.html
@@ -5,7 +5,12 @@
 <body>
   <div id="container">
     <header>
-      <h1>Todo List</h1>
+      <h1>Todo List ({{incompleteCount}})</h1>
+      <label class="hide-completed">
+        <input type="checkbox" checked="{{hideCompleted}}" />
+        Hide Completed Tasks
+      </label>
+
       <form action="" class="new-task">
         <input type="text" name="text" placeholder="Type to add new tasks"/>
       </form>
