--- a/meteor-simple-todos.html
+++ b/meteor-simple-todos.html
@@ -11,9 +11,13 @@
         Hide Completed Tasks
       </label>
 
-      <form action="" class="new-task">
-        <input type="text" name="text" placeholder="Type to add new tasks"/>
-      </form>
+      {{> loginButtons}}
+
+      {{#if currentUser}}
+        <form action="" class="new-task">
+          <input type="text" name="text" placeholder="Type to add new tasks"/>
+        </form>
+      {{/if}}
     </header>
 
     <ul>
@@ -28,6 +32,6 @@
   <li class="{{#if checked}}checked{{/if}}">
     <button class="delete">&times;</button>
     <input class="toggle-checked" type="checkbox" checked="{{checked}}">
-    <span class="text">{{text}}</span>
+    <span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
 </template>
