--- a/meteor-simple-todos.html
+++ b/meteor-simple-todos.html
@@ -29,9 +29,20 @@
 </body>
 
 <template name="task">
-  <li class="{{#if checked}}checked{{/if}}">
+  <li class="{{#if checked}}checked{{/if}} {{#if private}}private{{/if}}">
     <button class="delete">&times;</button>
     <input class="toggle-checked" type="checkbox" checked="{{checked}}">
+
+    {{#if isOwner}}
+      <button class="toggle-private">
+        {{#if private}}
+          Private
+        {{else}}
+          Public
+        {{/if}}
+      </button>
+    {{/if}}
+
     <span class="text"><strong>{{username}}</strong> - {{text}}</span>
   </li>
 </template>
